<!--
  ~ Copyright Adrian Raff 2018.
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
  ~ The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
  ~
  -->

<resources>
    <!-- Random message generator string -->
    <string name="str1">You must now repent your sins and wash your mouth out with soap and water!</string>
    <string name="str2">You should join the Navy since you have the mouth of a sailor!</string>
    <string name="str3">You need to sew that trap shut, it is filthier than a trash can! </string>

    <!-- activity_main2 strings -->
    <string name="app_name">POTTY MOUTH</string>
    <string name="title_1">POTTY MOUTH</string>
    <string name="title_3">enter your names</string>
    <string name="input_1">PLAYER ONE</string>
    <string name="header_title_1">enter your names</string>
    <string name="input_2">PLAYER TWO</string>
    <string name="button_text_play">Play!</string>
    <string name="text_instructions">Welcome to Potty Mouth where the person with the dirtiest mouth LOSES! To begin playing, enter your names in the text boxes below. Every time someone says something dirty they must click the button corresponding to the word they said. First person to reach 50 points or more LOSES!</string>

    <!-- activity_main strings -->
    <string name="button_text_reset">Play Again</string>
    <string name="team_a_button_1">f*%K!!</string>
    <string name="team_a_button_2">s%*T!!</string>
    <string name="team_a_button_3">A$/*H!#@!</string>
    <string name="team_a_button_4">tidepod</string>
    <string name="team_b_button_1">f*%K!!</string>
    <string name="team_b_button_2">s%*T!!</string>
    <string name="team_b_button_3">A$/*H!#@!</string>
    <string name="team_b_button_4">tidepod</string>

    <string name="winString1">You have a big potty mouth</string>
    <string name="winString2">So far there is no big loser.</string>

    <string name="winString3"> YOU LOSE!</string>
    <string name="playerReset"> eats a TIDE POD! Ultra clean mouth!</string>
    <string name="totalScoreStringA">The total games won for \u0020 </string>
    <string name="totalScoreStringB">\u0020 is \u0020 </string>
    <string name="playerInputStringA">Get ready to play</string>
    <string name="playerInputStringB">and</string>
    <string name="winnerMessage2">Ready to play again!</string>

</resources>
